--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-resource": "1.2.14",
     "angular-cookies": "1.2.14",
     "angular-sanitize": "1.2.14",
-    "angular-route": "1.2.14"
+    "angular-route": "1.2.14",
+    "angulartics": "~0.14.15"
   },
   "devDependencies": {
     "angular-mocks": "1.2.14",
