--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-cookies": "1.2.14",
     "angular-sanitize": "1.2.14",
     "angular-route": "1.2.14",
-    "angulartics": "~0.14.15"
+    "angulartics": "~0.14.15",
+    "angular-social": "git@github.com:esvit/angular-social.git#master"
   },
   "devDependencies": {
     "angular-mocks": "1.2.14",
